tests/algorithms/x/C/ciphers/permutation_cipher.c
// Generated by Mochi 0.10.32 on 2025-08-07 11:03 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t generate_permutation_key_len;
size_t repeat_string_len;

static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

static char* str_list_int(const long long *arr, size_t len) {
    size_t cap = len * 32 + 2;
    char *buf = malloc(cap);
    size_t pos = 0;
    buf[pos++] = '[';
    for (size_t i = 0; i < len; i++) {
        char tmp[32];
        snprintf(tmp, sizeof(tmp), "%d", arr[i]);
        size_t n = strlen(tmp);
        if (pos + n + 2 >= cap) { cap = cap * 2 + n + 2; buf = realloc(buf, cap); }
        memcpy(buf + pos, tmp, n);
        pos += n;
        if (i + 1 < len) buf[pos++] = ' ';
    }
    buf[pos++] = ']';
    buf[pos] = 0;
    return buf;
}

static long long* list_append_int(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static const char** list_append_str(const char **arr, size_t *len, const char *val) {
    arr = realloc((void*)arr, (*len + 1) * sizeof(char*));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static const char* _substring(const char *s, int start, int end) {
    int len = (int)strlen(s);
    if (start < 0) start = 0;
    if (end > len) end = len;
    if (start > end) start = end;
    char *res = malloc(end - start + 1);
    memcpy(res, s + start, end - start);
    res[end - start] = 0;
    return res;
}

long long seed = 1LL;
const char* message = "HELLO WORLD";
long long block_size = 0;
long long *key = NULL;
size_t key_len = 0;
const char* encrypted = "";
const char* decrypted = "";

long long user_rand(long long max);
long long generate_valid_block_size(long long message_length);
long long * generate_permutation_key(long long block_size);
const char* encrypt(const char* message, long long * key, size_t key_len, long long block_size);
const char* * repeat_string(long long times);
const char* decrypt(const char* encrypted, long long * key, size_t key_len);
int main(void);

long long user_rand(long long max) {
    seed = ((seed * 1103515245LL) + 12345LL) % 2147483647LL;
    return seed % max;
}

long long generate_valid_block_size(long long message_length) {
    long long *factors = NULL;
    size_t factors_len = 0;
    long long i = 2LL;
    while (i <= message_length) {
        if ((message_length % i) == 0LL) {
            factors = list_append_int(factors, &factors_len, i);
        }
        i = i + 1LL;
    }
    long long idx = user_rand(factors_len);
    return factors[(int)(idx)];
}

long long * generate_permutation_key(long long block_size) {
    long long *digits = NULL;
    size_t digits_len = 0;
    long long i = 0LL;
    while (i < block_size) {
        digits = list_append_int(digits, &digits_len, i);
        i = i + 1LL;
    }
    long long j = block_size - 1LL;
    while (j > 0LL) {
        long long k = user_rand(j + 1LL);
        long long temp = digits[(int)(j)];
        digits[(int)(j)] = digits[(int)(k)];
        digits[(int)(k)] = temp;
        j = j - 1LL;
    }
    return generate_permutation_key_len = digits_len, digits;
}

const char* encrypt(const char* message, long long * key, size_t key_len, long long block_size) {
    const char* encrypted = "";
    long long i = 0LL;
    while (i < strlen(message)) {
        const char* block = _substring(message, i, i + block_size);
        long long j = 0LL;
        while (j < block_size) {
            encrypted = str_concat(encrypted, _substring(block, key[(int)(j)], key[(int)(j)] + 1LL));
            j = j + 1LL;
        }
        i = i + block_size;
    }
    return encrypted;
}

const char* * repeat_string(long long times) {
    const char* *res = NULL;
    size_t res_len = 0;
    long long i = 0LL;
    while (i < times) {
        res = list_append_str(res, &res_len, "");
        i = i + 1LL;
    }
    return repeat_string_len = res_len, res;
}

const char* decrypt(const char* encrypted, long long * key, size_t key_len) {
    size_t klen = key_len;
    const char* decrypted = "";
    long long i = 0LL;
    while (i < strlen(encrypted)) {
        const char* block = _substring(encrypted, i, i + klen);
        const char* *original = repeat_string(klen);
        size_t original_len = repeat_string_len;
        long long j = 0LL;
        while (j < klen) {
            original[(int)(key[(int)(j)])] = _substring(block, j, j + 1LL);
            original_len = _substring_len;
            j = j + 1LL;
        }
        j = 0LL;
        while (j < klen) {
            decrypted = str_concat(decrypted, original[(int)(j)]);
            j = j + 1LL;
        }
        i = i + klen;
    }
    return decrypted;
}

int main(void) {
    {
        long long __start = _now();
        block_size = generate_valid_block_size(strlen(message));
        key = generate_permutation_key(block_size);
        key_len = generate_permutation_key_len;
        encrypted = encrypt(message, key, key_len, block_size);
        decrypted = decrypt(encrypted, key, key_len);
        puts(str_concat("Block size: ", str_int(block_size)));
        puts(str_concat("Key: ", str_list_int(key, key_len)));
        puts(str_concat("Encrypted: ", encrypted));
        puts(str_concat("Decrypted: ", decrypted));
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
